# ClawChater

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  README.md  start.md
doc/: agent.md  重构.md  (+5 more)
recall/: CLAUDE.md  README.md  __init__.py  app.py  config.py  db.py  main.py  ocr_worker.py  pyproject.toml  requirements.txt  run.pyw  slave.py  start.vbs
recall/android/RecallMobile/: build.gradle.kts  gradle.properties  settings.gradle.kts
recall/api/: routes.py  schemas.py
recall/core/: __init__.py  capture.py  container.py
recall/db/: database.py  schema.sql  screenshot.py  setting.py  summary.py
recall/doc/: BUGS.md  CHANGELOG.md  README.md  SYNC_API.md  framework.md
recall/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
recall/memory/: __init__.py  extractor.py  summarizer.py  text_memory.py  vector_memory.py
recall/scripts/: create_icon.py  process_ocr.py  restart.bat  test_api_config.py  test_config.py  test_llm.py  test_tools.py
recall/services/: capture.py  incoming_watcher.py  ocr_engine.py  ocr_worker.py  sync.py
recall/tests/: conftest.py  test_api.py  test_capture_engine.py  test_config.py  test_db_database.py  test_db_screenshot.py  test_db_setting.py  test_db_summary.py  test_engine.py  test_event_bus.py  test_monitors.py  test_ocr_engine.py  test_ocr_worker.py  test_regression_pipeline.py  test_resource_monitor.py
recall/ui/: __init__.py  tray.py  window.py
recall/utils/: gpu.py  time_parse.py  window.py
recall/web/: app.py
(+242 files in other folders)
